# python-llm-examples

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.in
notebooks/: LLaVA_Ollama.ipynb  LangChain_Ollama.ipynb  PydanticAI_Ollama.ipynb  StableDiffusion2.ipynb
src/examples/: example_HuggingFace_Llama4.py  example_HuggingFace_Transformer.py  example_LLaVA_Ollama.py  example_LangChain_Ollama.py  example_PydanticAI_Ollama.py  example_StableDiffusion2.py  example_StableDiffusion3.py  example_diffusers.py
src/python_llm_examples/: __init__.py
tests/: __init__.py
