[project]
name = "python-llm-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthias Rueedlinger",email = "md@rueedlinger.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "diffusers (>=0.33.1,<0.34.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "no-implicit-optional (>=1.4,<2.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "pydantic-ai (>=0.1.3,<0.2.0)",
    "ollama (>=0.4.8,<0.5.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
